
*****

Broken again. Reverted PyArg_ParseTuple edits.
Updated for loops.

*****

Updated everything except the PyArg_ParseTuple.

*****

Removed height calculation.

*****

Added y_sigma and x_sigma into the PyArg_ParseTuple.

*****

Added height and backgroun into optional PyArg_ParseTuple.

*****

Try now changing the input arguments, receive array, edit in place.

*****

What if, packing the inputs in an array.


*****  Tue Mar 15 23:55:10 CET 2022  *****

There is absolutely no reason why this keeps failing.
I'm giving up. Wrote code in the python module.
Removed src_c/_gauss.c entirely.

*****

Fixed bug with relative import.

*****

Updated puppies version to 0.2.0a2.

*****

Changed license to GNU GPL v2.


*****  Fri Mar 18 21:35:35 CET 2022  *****

Housekeeping.
pup_spitzer.py is running clean.


*****  Tue Mar 22 22:30:31 CET 2022  *****

Got Spitzer pipeline running intil badpix.

*****

Updated README conda links.

*****

Updated mc3 requirement.


*****  Wed Mar 23 09:55:19 CET 2022  *****

Got Spitzer pipeline running intil centering.


*****  Wed Mar 27 22:06:12 CET 2024  *****

Updated the pup marker to work with matplotlib v3.4+
(as well as keeping compatibility with older versions).

*****

Getting the docs back to life.

*****

Replaced travis CI with github workflows for automated testing.

*****

Cleaning up the code.
Raise NotImplementedError for PSF optimal photometry routines.

*****

Cleaned up centering.

*****

Cleaned up plots code.

*****

Cleaned up badpix.

*****

Cleaned up pup_model.py

*****

Updated workflow versions.

*****

Updated copyright and version to 0.3.0


*****  Do 28 Mär 2024 11:12:26 CET  *****

Updated setup.py and pyproject.toml.
(Moving most of the configuration options to the latter)

*****

Updated README and docs' index and license.

*****

Split getstarted.rst into install.rst and pup_marker.rst.
Also added top-level section for Dog of the day.
 
*****

Fixed pup entry point in pyproject.toml.
